--- a/form.html
+++ b/form.html
@@ -12,11 +12,14 @@
     Password: <input type="password" name="password" /> <br />
     Date of Birth: <input type="date" name="birthday" /> <br />
     Gender:
-    <input type="radio" name="gender" value="Male" />
-    <input type="radio" name="gender" value="Female" />
-    <input type="radio" name="gender" value="Other" /><br />
+    <input type="radio" name="male" value="male" /> Male
+    <input type="radio" name="female" value="female" /> Female
+    <input type="radio" name="other" value="other" /> Other
+    <br />
     Mobile: <input type="tel" name="mobilenumber" /> <br />
-    <textarea name="address" value="Address" cols="30" rows="10"></textarea> <br />
+    Address:
+    <textarea name="address" value="Address: " cols="30" rows="10"></textarea>
+    <br />
     <input type="submit" value="Submit" />
     <input type="reset" value="Reset" />
   </body>
