Edited Github Hyperlink

--- a/Resume/contactme.html
+++ b/Resume/contactme.html
@@ -12,7 +12,7 @@
     <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea><br>
     <input type="button" value="Submit">
     <input type="button" value="Reset">
-    <p><a href="www.facebook.com/jeromefloresss">Facebook</a> <a href="www.github.com/jeromefloresss">Github</a></p>
+    <p><a href="www.facebook.com/jeromefloresss">Facebook</a> <a href="https://www.github.com/jeromefloresss">Github</a></p>
 
 </body>
 
