--- a/Resume/contactme.html
+++ b/Resume/contactme.html
@@ -7,13 +7,14 @@
 <body>
     <h2><a href="https://jeromefloresss.github.io/Flores/Resume/index.html">&larr; Back</a></h2>
     <h1>Drop a Message</h1>
-    <input type="text" placeholder="Enter Name"><br>
-    <input type="email" placeholder="Enter Email"><br>
-    <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea><br>
-    <input type="button" value="Submit">
-    <input type="button" value="Reset">
-    <p><a href="www.facebook.com/jeromefloresss">Facebook</a> <a href="https://www.github.com/jeromefloresss">Github</a></p>
-
+    <form>
+        <input type="text" name="text" placeholder="Enter Name"><br>
+        <input type="email" name="email" placeholder="Enter Email"><br>
+        <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea><br>
+        <input type="submit" value="Submit">
+        <input type="reset" value="Reset">
+    </form>
+    <p><a href="www.facebook.com/jeromefloresss">Facebook</a> <a href="www.github.com/jeromefloresss">Github</a></p>
 </body>
 
 </html>
