--- a/Resume/contactme.html
+++ b/Resume/contactme.html
@@ -14,7 +14,7 @@
         <input type="submit" value="Submit">
         <input type="reset" value="Reset">
     </form>
-    <p><a href="www.facebook.com/jeromefloresss">Facebook</a> <a href="www.github.com/jeromefloresss">Github</a></p>
+    <p><a href="https://www.facebook.com/jeromefloresss">Facebook</a> <a href="https://www.github.com/jeromefloresss">Github</a></p>
 </body>
 
 </html>
