--- a/Resume/contactme.html
+++ b/Resume/contactme.html
@@ -1,20 +1,77 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://kit.fontawesome.com/0266d898be.css"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
-</head>
+  </head>
 
-<body>
-    <h2><a href="https://jeromefloresss.github.io/Flores/Resume/index.html">&larr; Back</a></h2>
-    <h1>Drop a Message</h1>
-    <form>
-        <input type="text" name="text" placeholder="Enter Name"><br>
-        <input type="email" name="email" placeholder="Enter Email"><br>
-        <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea><br>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-    </form>
-    <p><a href="https://www.facebook.com/jeromefloresss">Facebook</a> <a href="https://www.github.com/jeromefloresss">Github</a></p>
-</body>
-
+  <body>
+    <div class="left">
+      <img src="Pic.jpg" class="pic" alt="My Picture" />
+      <h1>Jerome Gomez Flores</h1>
+      <h3>College Student / Programmer</h3>
+      <p><i>"What's meant for you will never pass you by."</i></p>
+      <p class="info">
+        <b>Address:</b> 0314 San Miguel St., Santa Cruz, Naga City Camarines Sur
+      </p>
+      <p class="info">
+        <b>Email:</b>
+        <a href="flores.jerome.gomez@gmail.com"
+          >flores.jerome.gomez@gmail.com</a
+        >
+      </p>
+      <p class="info"><b>Mobile Number:</b> 09954774867</p>
+      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+      <a href="https://www.facebook.com/jeromefloresss"
+        ><img src="facebook.png" alt="Facebook" class="icon"
+      /></a>
+      <a href="https://www.github.com/jeromefloresss"
+        ><img src="github.png" alt="Facebook" class="icon"
+      /></a>
+      <div>
+        <p>&copy; 2023 Jerome Flores</p>
+      </div>
+    </div>
+    <div class="mainDiv2">
+        <img src="previous.png" alt="Back" class="backButton">
+      <div class="form">
+        <h1 class="drop">Drop a Message</h1>
+        <form>
+          <input type="text" name="text" placeholder="Enter Name" /><br />
+          <input type="email" name="email" placeholder="Enter Email" /><br />
+          <textarea
+            name="message"
+            cols="50"
+            rows="10"
+            placeholder="Your message here..."
+          ></textarea
+          ><br />
+          <input type="submit" value="Submit" />
+          <input type="reset" value="Reset" />
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
