--- a/Resume/index.html
+++ b/Resume/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,45 +19,63 @@
   </head>
 
   <body>
-    <div class="mainDiv">
-      <div class="header">
-        <img src="Pic.jpg" class="pic" alt="My Picture" />
-        <h1>Jerome Gomez Flores</h1>
-        <h3>Student / Second Year - Bachelor of Science in Computer Science</h3>
+    <div class="left">
+      <img src="Pic.jpg" class="pic" alt="My Picture" />
+      <h1>Jerome Gomez Flores</h1>
+      <h3>College Student / Programmer</h3>
+      <p><i>"What's meant for you will never pass you by."</i></p>
+      <p class="info">
+        <b>Address:</b> 0314 San Miguel St., Santa Cruz, Naga City Camarines Sur
+      </p>
+      <p class="info">
+        <b>Email:</b>
+        <a href="flores.jerome.gomez@gmail.com"
+          >flores.jerome.gomez@gmail.com</a
+        >
+      </p>
+      <p class="info"><b>Mobile Number:</b> 09954774867</p>
+      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+      <div class="bottom">
         <p>
-          <b>Address:</b> 0314 San Miguel St., Santa Cruz, Naga City Camarines
-          Sur
-        </p>
-        <p>
-          <b>Contact Information:</b>
-          <a href="flores.jerome.gomez@gmail.com"
-            >flores.jerome.gomez@gmail.com</a
+          For inquiries about website and application development,
+          <a
+            href="https://jeromefloresss.github.io/Flores/Resume/contactme.html"
+            >Send me a message!</a
           >
-          | 09954774867
         </p>
-        <p><i>"What's meant for you will never pass you by."</i></p>
+      </div>
+      <a href="https://www.facebook.com/jeromefloresss"
+        ><img src="facebook.png" alt="Facebook" class="icon"
+      /></a>
+      <a href="https://www.github.com/jeromefloresss"
+        ><img src="github.png" alt="Facebook" class="icon"
+      /></a>
+      <div class="bottom">
+        <p>&copy; 2023 Jerome Flores</p>
+      </div>
+    </div>
+
+    <div class="mainDiv">
+      <div>
+        <h3>Summary</h3>
+        <p>I am an aspiring Back-End developer.</p>
         <hr />
       </div>
 
-      <div>
-        <h3>Summary</h3>
-        <p>I am an aspiring Full Stack developer.</p>
-        <hr />
-      </div>
       <div class="middle">
         <h3>Work Experience</h3>
-        <ul>
+        <ul class="work">
           <li>
-            <h4>Frontend Developer / CodeArmy.dev</h4>
-            <p>August 2022 - Present</p>
-            <p>
+            <h4 class="work">Frontend Developer / CodeArmy.dev</h4>
+            <p class="work">August 2022 - Present</p>
+            <p class="work">
               Create different views for the different parts of the application.
             </p>
           </li>
           <li>
-            <h4>Frontend Developer / CODEC Volunteer</h4>
-            <p>May 2022 - Present</p>
-            <p>
+            <h4 class="work">Frontend Developer / CODEC Volunteer</h4>
+            <p class="work">May 2022 - Present</p>
+            <p class="work">
               Recoded the entire CODEC platform to a new tech stach as a team.
             </p>
           </li>
@@ -61,65 +83,55 @@
         <div>
           <h3>Education</h3>
           <table>
-            <tr>
-              <th>Degree / Institution</th>
-              <th>Level</th>
-              <th>Graduation Date</th>
-            </tr>
-            <tr>
-              <td>Ateneo de Naga University</td>
-              <td>College</td>
-              <td>2025</td>
-            </tr>
-            <tr>
-              <td>Naga City Science High School</td>
-              <td>Senior High School</td>
-              <td>2020</td>
-            </tr>
-            <tr>
-              <td>Naga City Science High School</td>
-              <td>High School</td>
-              <td>2016</td>
-            </tr>
-            <tr>
-              <td>Naga Central School 2</td>
-              <td>Elementary</td>
-              <td>2012</td>
-            </tr>
+            <thead>
+              <tr>
+                <th>Degree / Institution</th>
+                <th>Level</th>
+                <th>Graduation Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Ateneo de Naga University</td>
+                <td>College</td>
+                <td>2025</td>
+              </tr>
+              <tr>
+                <td>Naga City Science High School</td>
+                <td>Senior High School</td>
+                <td>2020</td>
+              </tr>
+              <tr>
+                <td>Naga City Science High School</td>
+                <td>High School</td>
+                <td>2016</td>
+              </tr>
+              <tr>
+                <td>Naga Central School 2</td>
+                <td>Elementary</td>
+                <td>2012</td>
+              </tr>
+            </tbody>
           </table>
         </div>
       </div>
-        <hr />
-        <h3>General and Technical Skills</h3>
-        <ol>
-          <li>C++</li>
-          <li>Java</li>
-          <li>HTML</li>
-          <li>Always willing to learn.</li>
-          <li>Can easily adapt to changes.</li>
-          <li>Hardworking</li>
-        </ol>
-        <hr />
-        <h3>Character References</h3>
-        <ul>
-          <li>Frederick Olaño</li>
-          <li>Joshua Martinez</li>
-          <li>Adrian Pajarillo</li>
-        </ul>
-      </div>
       <hr />
-      <div>
-        <p>
-          For inquiries about website and application development, 
-          <a
-            href="https://jeromefloresss.github.io/Flores/Resume/contactme.html"
-            >Contact me!</a
-          >
-        </p>
-      </div>
-      <div>
-        <p>&copy; 2023 Jerome FLores</p>
-      </div>
+      <h3>General and Technical Skills</h3>
+      <ol>
+        <li>C++</li>
+        <li>Java</li>
+        <li>HTML</li>
+        <li>Always willing to learn.</li>
+        <li>Can easily adapt to changes.</li>
+        <li>Hardworking</li>
+      </ol>
+      <hr />
+      <h3>Character References</h3>
+      <ul>
+        <li>Mr. Frederick Olaño - ADNU Professor</li>
+        <li>Mr. Joshua Martinez - Dean, ADNU College of Computer Studies</li>
+        <li>Mr. Adrian Pajarillo - ADNU Professor</li>
+      </ul>
     </div>
   </body>
 </html>
