--- a/Resume/contactme.html
+++ b/Resume/contactme.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="mainDiv2">
-        <img src="previous.png" alt="Back" class="backButton">
+       <a href="https://jeromefloresss.github.io/Flores/Resume/index.html"><img src="previous.png" alt="Back" class="backButton"></a>
       <div class="form">
         <h1 class="drop">Drop a Message</h1>
         <form>
