--- a/HoneyLight2/index.html
+++ b/HoneyLight2/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="mystyle.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="hero vh-100">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="assets/logo.png" alt="HoneyLight" height="50" />
+          </a>
+          <div class="navbar-nav text-uppercase fw-bold">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Collection</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Contact</a>
+          </div>
+          <div class="d-flex align-items-center gap-3">
+            <img src="assets/search.png" alt="Search" />
+						<div class="vr"></div>
+            <img src="assets/basket.png" alt="Basket" />
+          </div>
+        </div>
+      </nav>
+			<div>
+				<h1>Bright Clothes,</h1>
+				<h1>Sharp Identity.</h1>
+			</div>
+    </div>
+  </body>
+</html>
