--- a/HoneyLight2/index.html
+++ b/HoneyLight2/index.html
@@ -13,12 +13,13 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Honey Light</title>
   </head>
   <body>
-    <div class="hero vh-100">
+    <!-- Hero Section -->
+    <div class="hero vh-100 px-5 pt-3">
       <nav class="navbar navbar-expand-lg">
-        <div class="container">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="assets/logo.png" alt="HoneyLight" height="50" />
           </a>
@@ -30,15 +31,393 @@
           </div>
           <div class="d-flex align-items-center gap-3">
             <img src="assets/search.png" alt="Search" />
-						<div class="vr"></div>
+            <div class="vr"></div>
             <img src="assets/basket.png" alt="Basket" />
           </div>
         </div>
       </nav>
-			<div>
-				<h1>Bright Clothes,</h1>
-				<h1>Sharp Identity.</h1>
-			</div>
+      <div class="d-flex align-items-center" style="height: 90%">
+        <div class="container-fluid">
+          <h1 class="heading1 text-yellow">Bright Clothes,</h1>
+          <h1 class="heading1">Sharp Identity.</h1>
+          <p class="fs-5 col-3 mt-4 mb-5">
+            Light up your style by wearing our premium products that never go
+            out of trend.
+          </p>
+          <button class="bg-black text-white px-4 py-2 text-uppercase border-0">
+            Shop Now
+          </button>
+          <button class="btn">
+            See what's new
+            <i class="bi bi-arrow-right-circle mx-3"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Featured Image -->
+    <div class="container-fluid">
+      <div class="row my-5">
+        <div class="col-8 mx-auto">
+          <h2 class="heading2 text-center">
+            Matching Style and Class with Luxury
+          </h2>
+          <div class="row gx-5 mt-5">
+            <div class="col featured">
+              <img src="assets/img2.png" alt="featured image" />
+            </div>
+            <div class="col my-auto fs-5 lh-lg">
+              <p>
+                We provide you with great clothes and accessories that befit you
+                and your lifestyle. Our products are made from the highest
+                quality fabrics and guaranteed to give you confidence,
+                durability, and comfort.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Carousel -->
+    <div class="container-fluid px-5 my-5 pt-5">
+      <div id="myCarousel" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="overlay"></div>
+            <img src="assets/item1.jpg" alt="item 1" />
+            <div
+              class="carousel-caption text-center h-100 row align-items-center"
+            >
+              <div class="col">
+                <h2 class="heading2">Weekend Special Sale 50% off</h2>
+                <p class="fs-5">
+                  Providing you with confidence and comfort in every clothes
+                </p>
+                <button class="btn-yellow">Get it Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="overlay"></div>
+            <img src="assets/item2.jpg" alt="item 1" />
+            <div
+              class="carousel-caption text-center h-100 row align-items-center"
+            >
+              <div class="col">
+                <h2 class="heading2">Buy 1 Take 1 Christmas Special</h2>
+                <p class="fs-5">
+                  Providing you with confidence and comfort in every clothes
+                </p>
+                <button class="btn-yellow">Get it Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="overlay"></div>
+            <img src="assets/item3.jpg" alt="item 1" />
+            <div
+              class="carousel-caption text-center h-100 row align-items-center"
+            >
+              <div class="col">
+                <h2 class="heading2">#AllKindsOfLove</h2>
+                <p class="fs-5">
+                  Providing you with confidence and comfort in every clothes
+                </p>
+                <button class="btn-yellow">Get it Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <!-- Company Logo -->
+    <div class="container border-bottom py-5">
+      <p class="text-uppercase fs-5 fw-bold text-center">
+        The Companies that make their life
+        <span class="text-yellow">light</span>
+      </p>
+      <div class="row align-items-center gap-5">
+        <div class="col"><img src="assets/image 1.png" alt="image 1" /></div>
+        <div class="col"><img src="assets/image 2.png" alt="image 2" /></div>
+        <div class="col"><img src="assets/image 3.png" alt="image 3" /></div>
+        <div class="col"><img src="assets/image 4.png" alt="image 4" /></div>
+        <div class="col"><img src="assets/image 5.png" alt="image 5" /></div>
+      </div>
+    </div>
+    <!-- Collection -->
+    <div class="container py-5 text-center border-bottom">
+      <h2 class="heading2">Our Collections</h2>
+      <div class="row gap-4 mt-5 mb-5">
+        <div class="card col p-0 shadow mb-5 bg-white rounded">
+          <img src="assets/fab.png" alt="fab" />
+          <div class="card-body">
+            <h5 class="card-title">Fab & Formal</h5>
+            <a href="#" class="btn-underlined">View Collections</a>
+          </div>
+        </div>
+        <div class="card col p-0 shadow mb-5 bg-white rounded">
+          <img src="assets/summer.png" alt="fab" />
+          <div class="card-body">
+            <h5 class="card-title">Summer Vibes</h5>
+            <a href="#" class="btn-underlined">View Collections</a>
+          </div>
+        </div>
+        <div class="card col p-0 shadow mb-5 bg-white rounded">
+          <img src="assets/spring.png" alt="fab" />
+          <div class="card-body">
+            <h5 class="card-title">Spring Trends</h5>
+            <a href="#" class="btn-underlined">View Collections</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- About Us -->
+    <div class="container border-bottom mb-5">
+      <div class="row my-5">
+        <div class="col-11 mx-auto">
+          <h2 class="heading2 text-center">About Us</h2>
+          <div class="row gx-5 mt-5 mb-5">
+            <div class="col my-auto fs-5 lh-lg">
+              <p>
+                The magic of fashion is an undoubted fact because it is a way of
+                self expression and it gives pleasure and satisfaction.
+                Fashionable clothes and accessories are the art that we bring to
+                the masses. Our company manufactured clothes and accessories
+                with best and high-quality materials. With years of experience
+                we know what people from all over the world are eager to wear.
+                We lure our customers with comfort, style, and beauty of our
+                products.
+              </p>
+              <button
+                class="bg-black text-white px-4 py-2 text-uppercase border-0 mt-5"
+              >
+                Contact Us
+              </button>
+            </div>
+            <div class="col featured">
+              <img src="assets/about.png" alt="featured image" />
+            </div>
+          </div>
+          <div class="row mt-5 pt-5">
+            <div class="col">
+              <div class="row">
+                <div
+                  class="col-4 d-flex justify-content-center align-items-center"
+                >
+                  <h1 class="number align-middle">01.</h1>
+                  <img src="assets/Hexagon.png" alt="Hexagon" />
+                </div>
+                <div class="col-8 my-auto">
+                  <h5 class="text-uppercase">Member Discount</h5>
+                  <p>Buy as much products as you need at less price</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div
+                  class="col-4 d-flex justify-content-center align-items-center"
+                >
+                  <h1 class="number align-middle">02.</h1>
+                  <img src="assets/Hexagon.png" alt="Hexagon" />
+                </div>
+                <div class="col-8 my-auto">
+                  <h5 class="text-uppercase">Free Shipping</h5>
+                  <p>No-fee delivery to any part of the world</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div
+                  class="col-4 d-flex justify-content-center align-items-center"
+                >
+                  <h1 class="number align-middle">03.</h1>
+                  <img src="assets/Hexagon.png" alt="Hexagon" />
+                </div>
+                <div class="col-8 my-auto">
+                  <h5 class="text-uppercase">24/7 Online Support</h5>
+                  <p>Contact us anytime in live chat or get a call back</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Testimonials -->
+    <div class="container border-bottom mb-5">
+      <div class="row my-5">
+        <div class="col-11 mx-auto">
+          <h2 class="heading2 text-center">Testimonials</h2>
+          <p class="text-center fs-5">
+            Here's what our <span class="text-yellow">lovely </span>customers
+            tell about us
+          </p>
+        </div>
+      </div>
+      <div id="testimonies" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-25 h-50 mx-auto"
+              src="assets/customer1.jpg"
+              alt="customer 1"
+            />
+            <div class="carousel-caption d-none d-md-block text-black">
+              <p>
+                Having the distressing experience with some online shops before
+                decided to say THANK YOU to all personnel of this store. Your
+                are not only friendly, but deliver really good products in the
+                shortest possible terms. In a word, I am absolutely happy with
+                my purchase and the service. Everything was perfect!
+              </p>
+              <h5>Leigh Anne</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-25 h-50 mx-auto"
+              src="assets/customer2.jpg"
+              alt="customer 2"
+            />
+            <div class="carousel-caption d-none d-md-block text-black">
+              <p>
+                I had been seeing ads of designs I really liked but was wary of
+                buying online, I decided the cost was worth the risk so ordered
+                a top, I was so happy with it , exactly as it looked that I’ve
+                purchased 3 more tops & a pair of pants . Everything has been
+                exactly as advertised. Sizing has been right for me & delivery
+                prompt I’ll continue to buy
+              </p>
+              <h5>Marion L.</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-25 h-50 mx-auto"
+              src="assets/customer3.jpg"
+              alt="customer 3"
+            />
+            <div class="carousel-caption d-none d-md-block text-black">
+              <p>
+                I am over the moon happy with all of my purchases. I am
+                officially addicted! The fabrics are soft and comfortable
+                against the skin, drape beautifully and everything is so
+                flattering. I never used to be not one for online clothes
+                shopping, but I’m so glad I took a chance on HoneyLight. My
+                third load of purchases just arrived and it is all divine 😍
+              </p>
+              <h5>Melissa F.</h5>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev arrow-btn"
+          type="button"
+          data-bs-target="#testimonies"
+          data-bs-slide="prev"
+        >
+          <span
+            class="carousel-control-prev-icon testimonials-prev"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonies"
+          data-bs-slide="next"
+        >
+          <span
+            class="carousel-control-next-icon testimonials-next"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <!-- Contact Us -->
+    <div class="container-fluid">
+      <div class="row my-5">
+        <div class="col-6 mx-auto text-center">
+          <h2 class="heading2">
+            Get Updated with our <br />
+            Latest Collections!
+          </h2>
+          <p class="my-5">
+            Give us your email and you will be updated daily with the
+            <span class="text-yellow">latest and trendy</span>
+            products, in detail!
+          </p>
+          <input
+            class="py-4 px-5 my-5 email"
+            type="email"
+            placeholder="Enter your Email Address"
+          />
+          <br />
+          <button
+            class="bg-black text-white px-5 py-3 text-uppercase border-0 fw-bold my-5"
+          >
+            Subscribe
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <div class="container-fluid px-0 footer d-flex justify-content-center pt-5">
+      <div class="row my-5 d-flex justify-content-center">
+        <div class="col-12 d-flex justify-content-center">
+          <img class="ratio ratio-1x1" src="assets/hexlogo.png" alt="" />
+        </div>
+        <div class="col-3 my-5 text-gray">
+          <p class="text-center fs-5">
+            We lure our customers with comfort, style, and beauty of our
+            products.
+          </p>
+        </div>
+        <div class="row my-5 d-flex justify-content-center">
+          <div class="col-8 d-flex justify-content-center gap-5">
+            <button class="btn text-white mx-3">Home</button>
+            <button class="btn text-white mx-3">Collections</button>
+            <button class="btn text-white mx-3">About</button>
+            <button class="btn text-white mx-3">Contact</button>
+            <button class="btn text-white mx-3">Help</button>
+            <button class="btn text-white mx-3">FAQs</button>
+          </div>
+        </div>
+        <div class="row my-5 d-flex justify-content-center">
+          <div class="col-8 d-flex justify-content-center gap-5">
+            <button class="btn text-white">
+              <h2><i class="bi bi-facebook"></i></h2>
+            </button>
+            <button class="btn text-white">
+              <h2><i class="bi bi-twitter"></i></h2>
+            </button>
+            <button class="btn text-white">
+              <h2><i class="bi bi-instagram"></i></h2>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
